--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,18 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.settings/*
+bin/*
+target/*
+*~
+*.txt
+.classpath
+.project
+db/mealplanner.lck
+db/mealplanner.log
+db_old/*
+deploy/*
+meals.csv
+sides.csv
+src_old/*
+vegetables.csv
